# argflow

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md
mappings/: go.yaml  python.yaml  rust.yaml
src/: cli.rs  lib.rs  logging.rs  main.rs
src/classifier/: classification.rs  mod.rs  rules.rs
src/discovery/: cache.rs  detector.rs  filter.rs  loader.rs  mod.rs  utils.rs
src/discovery/languages/: go.rs  mod.rs
src/engine/: context.rs  file_cache.rs  lang_features.rs  mod.rs  node_types.rs  operators.rs  scope.rs  sources.rs  value.rs
src/engine/strategies/: call.rs  composite.rs  identifier.rs  index.rs  literal.rs  mod.rs  selector.rs  unary.rs
src/error/: classifier.rs  io.rs  mod.rs  parser.rs  query.rs
src/mappings/: mod.rs
src/output/: finding.rs  formatter.rs  mod.rs
src/presets/: loader.rs  mod.rs
src/query/: engine.rs  mod.rs
src/scanner/: imports.rs  mod.rs  patterns.rs
src/scanner/imports/: go.rs  mod.rs  python.rs
src/utils/: mod.rs  string.rs
tests/: cli_test.rs  discover_test.rs  discovery_e2e_test.rs  e2e_classification_test.rs  resolution_test.rs  scanner_go_test.rs  scanner_python_test.rs  scanner_test.rs
tests/discovery_tests/: mod.rs
tests/discovery_tests/cache/: go.rs  javascript.rs  mod.rs  python.rs  rust.rs  test_utils.rs
tests/discovery_tests/dependencies/: go.rs  javascript.rs  mod.rs  python.rs  rust.rs  test_utils.rs
tests/discovery_tests/filtering/: go.rs  javascript.rs  mod.rs  python.rs  rust.rs  test_utils.rs
tests/discovery_tests/integration/: go.rs  javascript.rs  mod.rs  python.rs  rust.rs  test_utils.rs
tests/discovery_tests/source_types/: go.rs  javascript.rs  mod.rs  python.rs  rust.rs  test_utils.rs
tests/discovery_tests/user_code/: go.rs  javascript.rs  mod.rs  python.rs  rust.rs  test_utils.rs
tests/fixtures/: mod.rs
tests/resolution_strategy_tests/: mod.rs
tests/resolution_strategy_tests/binary_resolution/: cross_language.rs  go.rs  javascript.rs  mod.rs  python.rs  rust_lang.rs  test_utils.rs
tests/scanner_tests/: mod.rs  scanner_go_test.rs  scanner_python_test.rs
(+134 files in other folders)
