[package]
name = "crypto-extractor-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "crypto-extractor"
path = "src/main.rs"

[lib]
name = "crypto_extractor_core"
path = "src/lib.rs"

[dependencies]
# Tree-sitter core - official Rust bindings
tree-sitter = "0.25.10"

# Language parsers
tree-sitter-go = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"

# Configuration and data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0.17"

# File system operations
walkdir = "2.4"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.10"

